--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
@@ -34,6 +36,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.9",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
