--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3001 --hot --host 192.168.0.115"
+    "dev": "webpack-dev-server --open --port 3000 --hot --host 192.168.0.115"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +41,7 @@
     "vue": "^2.5.2",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   }
 }
